--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "334064034@qq.com"
         }
     ],
-    "require": {},
+    "require": {
+        "monolog/monolog": "^2.3"
+    },
     "autoload": {
         "psr-4": {
             "Azhida\\Tools\\": "src"
